--- a/src/Components/TestCss/styles.css
+++ b/src/Components/TestCss/styles.css
@@ -1,32 +1,19 @@
-.parent {
-  background-color: lightgrey;
-  border: 1px solid black;
-  border-radius: 1rem;
-  padding: 1rem;
-  margin: 1rem;
-  font-weight: 900;
-  text-align: center;
-  color: pink;
+.card {
+  background-color: #ffebef;
+  border-radius: 0.25rem;
 }
 
 @media (min-width: 768px) {
-  .parent {
+  .card {
     max-width: 20rem;
   }
 }
 
-.parent .child1 {
-  background-color: blue;
-  opacity: 0.6;
-  margin: 1rem;
+.card .card-content {
   padding: 1rem;
-  display: inline-block;
 }
 
-.parent .child2 {
-  background-color: teal;
-  opacity: 0.6;
-  margin: 1rem;
-  padding: 1rem;
-  display: inline-block;
+.card .card-footer {
+  padding: 0rem 1rem 1rem;
+  text-align: right;
 }
